Refactor VectorMatcher for improved readability and performance